--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -264,6 +264,7 @@
     <ClCompile Include="CommandQueue.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
     <ClCompile Include="dds\DDSTextureLoader.cpp" />
+    <ClCompile Include="Font.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="IOUtil.cpp" />
@@ -276,6 +277,7 @@
     <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Profiler.cpp" />
+    <ClCompile Include="SpriteBatch.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -287,6 +289,7 @@
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="CommandList.hpp" />
     <ClInclude Include="CommandQueue.hpp" />
+    <ClInclude Include="Common.hpp" />
     <ClInclude Include="ConstantBuffer.hpp" />
     <ClInclude Include="d3dx12.hpp" />
     <ClInclude Include="dds\dds.hpp" />
@@ -294,6 +297,7 @@
     <ClInclude Include="dds\LoaderHelpers.hpp" />
     <ClInclude Include="dds\pch.hpp" />
     <ClInclude Include="dds\PlatformHelpers.hpp" />
+    <ClInclude Include="Font.hpp" />
     <ClInclude Include="Graphics.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="IOUtil.hpp" />
@@ -309,6 +313,7 @@
     <ClInclude Include="MeshRenderer.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="Profiler.hpp" />
+    <ClInclude Include="SpriteBatch.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="Shader.hpp" />
