--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -271,13 +271,16 @@
     <ClCompile Include="jae.cpp" />
     <ClCompile Include="jstring.cpp" />
     <ClCompile Include="jwstring.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MemoryStream.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Profiler.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SpriteBatch.cpp" />
+    <ClCompile Include="SRVBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -307,13 +310,17 @@
     <ClInclude Include="jvector.hpp" />
     <ClInclude Include="KeyCode.hpp" />
     <ClInclude Include="IJaeGame.hpp" />
+    <ClInclude Include="Light.hpp" />
     <ClInclude Include="Material.hpp" />
     <ClInclude Include="MemoryStream.hpp" />
     <ClInclude Include="Mesh.hpp" />
     <ClInclude Include="MeshRenderer.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="Profiler.hpp" />
+    <ClInclude Include="Renderer.hpp" />
+    <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SpriteBatch.hpp" />
+    <ClInclude Include="SRVBuffer.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="Shader.hpp" />
